# rust_cli_book_solutions

./: .gitignore  README.md
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
echor_vipin/: Cargo.toml
echor_vipin/src/: main.rs
echor_vipin/tests/: cli.rs
