[package]
name = "catr"
version = "0.1.0"
edition = "2021"
authors = ["Vipin Kumar <princeps091@gmail.com>"]
description = "My Rust implementation of cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["cargo","derive"]}

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = '0.8'